--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-FE_dev/** linguist-documentation=false
+* linguist-vendored
 FE_dev/** linguist-vendored=false
+tcha_Final/Frontend linguist-vendored=false
