--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 * linguist-vendored
-FE_dev/** linguist-vendored=false
-tcha_Final/Frontend linguist-vendored=false
+FE_dev/* linguist-vendored=false
+tcha_Final/Frontend/* linguist-vendored=false
