--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-FE_dev/** linguist-documentation=false
-FE_dev/** linguist-vendored=false
+FE_dev/**/** linguist-vendored 
+tcha_Final/BackEnd/**/** linguist-vendored
